[package]
name = "rs-telegram-bot"
version = "0.1.0"
authors = ["Ubsefor <letzdropthebas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.6", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["macros", "sync"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
tbot = "0.6.4"
base64 = "0.12.3"
url = "2.1.1"
meval = "0.2"
error-chain = "0.12.2"
image = "0.23.7"

# [[bin]]
# name = "instance1"
# path = "src/instance1.rs"